MAJ view index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Bienvenue chez <%= title %></p>
     <!-- <a href="/buy?type=pull&color=rouge">Acheter un pull over rouge</a> -->
     <form action="/buy" method="post">
       <input type="text" name="type" value="">
